name:                GhcPkgUtils
version:             1.0.0
synopsis:            Utilities for working with GHC packages
description:         Utilities for working with GHC packages
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable GhcPkgUtils
  main-is: GhcPkgUtils.hs
  other-modules:
    CabalVersions
    Config
    Outdated
    MultiVersion
    Unregister
    InstalledPackages
  build-depends:
    base          >=4.8  && <4.9,
    Cabal         >=1.22 && <1.23,
    directory     >=1.0  && <1.3,
    zlib          >=0.5  && <0.7,
    split         >=0.2  && <0.3,
    containers    >=0.5  && <0.6,
    filepath      >=1.3  && <1.5,
    tar           >=0.4  && <0.5,
    bytestring    >=0.10 && <0.11,
    process       >=1.1  && <1.3

  default-language:    Haskell2010
  ghc-options: -Wall



